--- a/src/sgx/CMakeLists.txt
+++ b/src/sgx/CMakeLists.txt
@@ -28,6 +28,7 @@ SET(RUST_SGX_BRIDGE rust_sgx_bridge)
 SET(POET_COMMON common/c11_support)
 SET(RUST_SGXFFI rust_sgxffi)
 SET(TEST_POET_ENCLAVE testEnclave)
+SET(TEST_POET testPoet)
 
 # COMPILER OPTIONS
 # XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
@@ -132,5 +133,5 @@ ADD_SUBDIRECTORY (${RUST_SGX_BRIDGE})
 ADD_SUBDIRECTORY (${POET_COMMON})
 ADD_SUBDIRECTORY (${RUST_SGXFFI})
 ADD_SUBDIRECTORY (${TEST_POET_ENCLAVE})
-
+ADD_SUBDIRECTORY (${TEST_POET})
 
