Unit tests for FFI layer, Enclave Poet (C++)
1. Includes Rust UTs for FFI layer, Poet Enclave and C++ UTs
2. Added docker-compose files for running FFI UTs and C++ UTs

Modified test folder name to test_poet_bridge

Signed-off-by: manju.ac <manjunath.a.c@intel.com>

Rebased UT changes

Signed-off-by: manju.ac <manjunath.a.c@intel.com>

--- a/sgx/CMakeLists.txt
+++ b/sgx/CMakeLists.txt
@@ -28,6 +28,7 @@ SET(RUST_SGX_BRIDGE rust_sgx_bridge)
 SET(POET_COMMON common/c11_support)
 SET(RUST_SGXFFI rust_sgxffi)
 SET(TEST_POET_ENCLAVE testEnclave)
+SET(TEST_POET_BRIDGE test_poet_bridge)
 
 # COMPILER OPTIONS
 # XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
@@ -135,5 +136,5 @@ ADD_SUBDIRECTORY (${RUST_SGX_BRIDGE})
 ADD_SUBDIRECTORY (${POET_COMMON})
 ADD_SUBDIRECTORY (${RUST_SGXFFI})
 ADD_SUBDIRECTORY (${TEST_POET_ENCLAVE})
-
+ADD_SUBDIRECTORY (${TEST_POET_BRIDGE})
 
