--- a/tests/unit-cxx.yaml
+++ b/tests/unit-cxx.yaml
@@ -16,7 +16,7 @@
 version: "3.6"
 
 services:
-  unit-poet:
+  unit-cxx:
     image: sawtooth-poet-engine-local:$ISOLATION_ID
     build:
       context: ./
@@ -27,9 +27,8 @@ services:
         - no_proxy
     volumes:
       - ..:/project/sawtooth-poet/
-    working_dir: '/project/sawtooth-poet/core'
+    working_dir: '/project/sawtooth-poet/bin'
     entrypoint: "bash -c \"\
-        source /project/sawtooth-poet/build_sgx_binary.sh \
-        && cargo test -- --test-threads=1 \""
+        source run_cxx_tests \""
     stop_signal: SIGKILL
 
